Reetan.Nayak Dev 25/force-app/main/default/objects/Saved_URL__c/Saved_URL__c.object-meta.xml
<CustomObject>
    <label>Saved URL</label>
    <nameField>
        <label>Saved URL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Saved URLs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>