Reetan.Nayak Dev 25/force-app/main/default/objects/Saved_URL__c/fields/body__c.field-meta.xml
<CustomField>
    <fullName>body__c</fullName>
    <label>body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>