Reetan.Nayak Dev 25/force-app/main/default/objects/Saved_URL__c/fields/isform__c.field-meta.xml
<CustomField>
    <fullName>isform__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is form URL encoded</label>
    <type>Checkbox</type>
</CustomField>