Reetan.Nayak Dev 25/force-app/main/default/objects/Saved_URL__c/fields/method__c.field-meta.xml
<CustomField>
    <fullName>method__c</fullName>
    <label>Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>