Reetan.Nayak Dev 25/force-app/main/default/objects/Saved_URL__c/fields/OAuth_Service__c.field-meta.xml
<CustomField>
    <fullName>OAuth_Service__c</fullName>
    <label>OAuth Service</label>
    <referenceTo>OAuthService__c</referenceTo>
    <relationshipLabel>Saved URLs</relationshipLabel>
    <relationshipName>Saved_URLs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>