Reetan.Nayak Dev 25/force-app/main/default/objects/Saved_URL__c/fields/url__c.field-meta.xml
<CustomField>
    <fullName>url__c</fullName>
    <externalId>true</externalId>
    <label>url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>